--- a/app/views/poems/new.html.erb
+++ b/app/views/poems/new.html.erb
@@ -1,15 +1,25 @@
-<%= form_with model: @poem, local: true do |f| %>
-  <div class="field">
-    <%= f.label :title %>
-    <%= f.text_field :title, required: true %>
-  </div>
+<div class="container">
+  <div class="content-wrapper">
+    <div class="form-container">
+      <div class="form-header">
+        <h1 class="form-title">New Poem</h1>
+      </div>
 
-  <div class="field">
-    <%= f.label :content %>
-    <%= f.text_area :content, required: true %>
-  </div>
+      <%= form_with model: @poem, local: true do |f| %>
+        <div class="field">
+          <%= f.label :title %>
+          <%= f.text_field :title, required: true, placeholder: "Enter poem title..." %>
+        </div>
 
-  <div class="actions">
-    <%= f.submit %>
+        <div class="field">
+          <%= f.label :content %>
+          <%= f.text_area :content, required: true, placeholder: "Write your poem here..." %>
+        </div>
+
+        <div class="actions">
+          <%= f.submit "Publish Poem" %>
+        </div>
+      <% end %>
+    </div>
   </div>
-<% end %>
+</div>
