--- a/app/views/images/index.html.erb
+++ b/app/views/images/index.html.erb
@@ -1,3 +1,14 @@
+<nav class="nav">
+  <div class="nav-content">
+    <%= link_to "Poetrie", root_path, class: "nav-brand" %>
+    <ul class="nav-links">
+      <li><%= link_to "Poems", poems_path, class: "nav-link" %></li>
+      <li><%= link_to "Gallery", images_path, class: "nav-link active" %></li>
+      <li><%= link_to "Upload Image", new_image_path, class: "nav-link" %></li>
+    </ul>
+  </div>
+</nav>
+
 <div class="container">
   <div class="index-header">
     <h1 class="index-title">Gallery</h1>
