--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -11,7 +11,7 @@
 <div class="welcome-container">
   <div class="welcome-header">
     <h1 class="welcome-title">Poetrie</h1>
-    <p class="welcome-subtitle">A collection of poetry and visual art, carefully curated and beautifully presented</p>
+    <p class="welcome-subtitle">A collection of poetry and visual art made by a very talented french artist that deserves recognition.</p>
   </div>
 
   <div class="welcome-cards">
