--- a/app/views/poems/show.html.erb
+++ b/app/views/poems/show.html.erb
@@ -14,8 +14,8 @@
       <div class="poem-header">
         <h1 class="poem-title"><%= @poem.title %></h1>
       </div>
-      
-      <pre class="poem-content" data-poems-target="poemContent"><%= @poem.show_content %></pre>
+
+      <pre class="poem-content" data-poems-target="poemContent"><% for i in 0..@poem.show_content.length -%><% if @comments_starting_positions.include?(i) -%><span class="comment-highlight" data-action="click->poems#showComment" id="comment_index-<%= @poem.comments.find_by(start_position: i).id %>"><% end -%><%= @poem.show_content[i] %><% if @comments_ending_positions.include?(i) -%></span><% end -%><% end -%></pre>
 
       <%= form_with(model: [@poem, @poem.comments.new], class: 'comment-form hidden', data: { action: "poems#handleSubmit", poems_target: "form" }) do |f| %>
         <%= f.hidden_field :start_position, data: { poems_target: "startPosition"} %>
@@ -26,6 +26,18 @@
         <div class="comment-form-actions">
           <span class="comment-form-footer" data-action="click->poems#handleCancel">Cancel</span>
           <%= f.submit "Comment", class: "comment-submit-btn" %>
+        </div>
+      <% end %>
+
+      <% @poem.comments.each do |comment| %>
+        <div class="comment-display hidden" id="comment-<%= comment.id %>" data-poems-target="commentDisplay">
+          <div class="comment-header">
+            <span class="comment-label">Comment</span>
+            <button class="comment-close" data-action="click->poems#hideComment" id="comment_close-<%= comment.id %>" aria-label="Close comment">×</button>
+          </div>
+          <div class="comment-body">
+            <p class="comment-text"><%= comment.content %></p>
+          </div>
         </div>
       <% end %>
 
