--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -4,6 +4,9 @@
     <ul class="nav-links">
       <li><%= link_to "Poems", poems_path, class: "nav-link" %></li>
       <li><%= link_to "Gallery", images_path, class: "nav-link" %></li>
+      <li>
+        <%= button_to "Logout", logout_path, method: :delete, class: "nav-link logout-btn", form: { style: "display: inline;" } %>
+      </li>
     </ul>
   </div>
 </nav>
